--- a/index.html
+++ b/index.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpeachyAi - Your AI Companion</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SpeachyAi - Your AI Companion</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">SpeachyAi</div>
-            <div class="nav-links">
-                <a href="#features">Features</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
-            </div>
-        </nav>
-    </header>
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <img src="appstore.png" alt="SpeachyAi Logo" class="logo-img"/>
+        <span>SpeachyAi</span>
+      </div>
+      <div class="nav-links">
+        <a href="#features">Features</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </nav>
+  </header>
 
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h1>SpeachyAi</h1>
-                <h2>Your AI Companion</h2>
-                <p>Experience meaningful conversations and grow your communication skills with our advanced AI companion.</p>
-                <div class="cta-buttons">
-                    <a href="#" class="cta-button android">
-                        <img src="android-icon.svg" alt="Android">
-                        Android
-                    </a>
-                    <a href="#" class="cta-button ios">
-                        <img src="ios-icon.svg" alt="iOS">
-                        iOS
-                    </a>
-                </div>
-            </div>
-        </section>
-    </main>
+  <main>
+    <section class="hero">
+      <div class="hero-content">
+        <h1>SpeachyAi</h1>
+        <h2>Your AI Companion</h2>
+        <p>
+          Experience meaningful conversations and grow your communication skills with our advanced AI companion.
+        </p>
+        <!-- Eğer cihaz mockup’unu koymak istersen: -->
+        <img src="screenshot.png" alt="SpeachyAi App Screenshot" class="hero-image"/>
 
-    <footer>
-        <div class="footer-content">
-            <p>©️ 2024 SpeachyAi. All Rights Reserved.</p>
-            <div class="footer-links">
-                <a href="contact.html">Contact Us</a>
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="terms.html">Terms of Use</a>
-            </div>
+        <div class="cta-buttons">
+          <a href="#" class="cta-button android">
+            <img src="android-icon.svg" alt="Android"/> Android
+          </a>
+          <a href="#" class="cta-button ios">
+            <img src="ios-icon.svg" alt="iOS"/> iOS
+          </a>
         </div>
-    </footer>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="footer-content">
+      <p>©️ 2024 SpeachyAi. All Rights Reserved.</p>
+      <div class="footer-links">
+        <a href="contact.html">Contact Us</a>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Use</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
