--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
       <div class="logo">
         <img src="appstore.png" alt="SpeachyAi Logo" class="logo-img"/>
-        <span>SpeachyAi</span>
+        <span>SpeachyAI</span>
       </div>
       <div class="nav-links">
         <a href="#features">Features</a>
