--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main>
     <section class="hero">
       <div class="hero-content">
-        <h1>SpeachyAi</h1>
+        <h1>SpeachyAI</h1>
         <h2>Your AI Companion</h2>
         <p>
           Experience meaningful conversations and grow your communication skills with our advanced AI companion.
