--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <footer>
     <div class="footer-content">
-      <p>©️ 2024 SpeachyAi. All Rights Reserved.</p>
+      <p>©️ 2024 SpeachyAI. All Rights Reserved.</p>
       <div class="footer-links">
         <a href="contact.html">Contact Us</a>
         <a href="privacy.html">Privacy Policy</a>
