--- a/index.html
+++ b/index.html
@@ -30,7 +30,33 @@
           Experience meaningful conversations and grow your communication skills with our advanced AI companion.
         </p>
         <!-- Eğer cihaz mockup’unu koymak istersen: -->
-        <img src="screenshot.png" alt="SpeachyAi App Screenshot" class="hero-image"/>
+       // <img src="screenshot.png" alt="SpeachyAi App Screenshot" class="hero-image"/>
+
+        
+    <div class="relative overflow-hidden">
+      <div id="slider" class="flex transition-transform duration-500">
+        <img src="screenshot.png" alt="SpeachyAi App Screenshot" class="hero-image" />
+        <img src="screenshot2.PNG" alt="SpeachyAi App Screenshot" class="hero-image" />
+        <img src="screenshot3.PNG" alt="SpeachyAi App Screenshot" class="hero-image" />
+      </div>
+
+      <!-- Butonlar -->
+      <button onclick="slide(-1)" class="absolute left-2 top-1/2 -translate-y-1/2 bg-white p-2 rounded-full shadow">⬅</button>
+      <button onclick="slide(1)" class="absolute right-2 top-1/2 -translate-y-1/2 bg-white p-2 rounded-full shadow">➡</button>
+    </div>
+  </div>
+
+  <script>
+    let currentIndex = 0;
+    const slider = document.getElementById("slider");
+
+    function slide(direction) {
+      const totalSlides = slider.children.length;
+      currentIndex = (currentIndex + direction + totalSlides) % totalSlides;
+      slider.style.transform = `translateX(-${currentIndex * 100}%)`;
+    }
+  </script>
+
 
         <div class="cta-buttons">
           <a href="#" class="cta-button android">
