--- a/index.html
+++ b/index.html
@@ -6,38 +6,58 @@
   <title>SpeachyAI - Your AI Companion</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
+    .hero-content {
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+
     .slider-wrapper {
       position: relative;
-      max-width: 400px;
+      width: 100%;
+      max-width: 1200px;
+      height: 400px;
       margin: 2rem auto;
-      height: 600px;
+      overflow: hidden;
     }
 
     .slider {
       position: relative;
       width: 100%;
       height: 100%;
-      border-radius: 20px;
-      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .slide {
       position: absolute;
-      width: 100%;
+      width: 280px;
       height: 100%;
+      transition: all 0.5s ease-in-out;
+      overflow: hidden;
+      border-radius: 20px;
       opacity: 0;
-      transition: opacity 0.5s ease-in-out;
+      transform: translateX(100%) scale(0.8);
+    }
+
+    .slide.prev {
+      opacity: 0.5;
+      transform: translateX(-100%) scale(0.8);
+      filter: blur(3px);
+      z-index: 1;
     }
 
     .slide.active {
       opacity: 1;
+      transform: translateX(0) scale(1);
       z-index: 2;
     }
 
     .slide.next {
       opacity: 0.5;
+      transform: translateX(100%) scale(0.8);
+      filter: blur(3px);
       z-index: 1;
-      transform: scale(0.95);
     }
 
     .slide img {
@@ -51,18 +71,18 @@
       display: flex;
       gap: 0.5rem;
       position: absolute;
-      bottom: 1.25rem;
+      bottom: 1rem;
       left: 50%;
       transform: translateX(-50%);
       z-index: 3;
     }
 
     .slider-nav a {
-      width: 0.5rem;
-      height: 0.5rem;
+      width: 8px;
+      height: 8px;
       border-radius: 50%;
       background-color: #fff;
-      opacity: 0.75;
+      opacity: 0.5;
       transition: all 0.3s ease;
       cursor: pointer;
     }
@@ -75,8 +95,21 @@
     .slider-nav a.active {
       opacity: 1;
       background-color: #fff;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
       transform: scale(1.2);
+    }
+
+    .cta-buttons {
+      margin-top: 2rem;
+    }
+
+    @media (max-width: 768px) {
+      .slider-wrapper {
+        height: 300px;
+      }
+
+      .slide {
+        width: 220px;
+      }
     }
   </style>
 </head>
@@ -106,10 +139,10 @@
         
         <div class="slider-wrapper">
           <div class="slider" id="slider">
-            <div class="slide active">
+            <div class="slide">
               <img src="screenshot.png" alt="SpeachyAi App Screenshot 1"/>
             </div>
-            <div class="slide next">
+            <div class="slide">
               <img src="screenshot2.PNG" alt="SpeachyAi App Screenshot 2"/>
             </div>
             <div class="slide">
@@ -164,6 +197,8 @@
         slide.className = "slide";
         if (index === currentSlide) {
           slide.classList.add("active");
+        } else if (index === (currentSlide - 1 + slides.length) % slides.length) {
+          slide.classList.add("prev");
         } else if (index === (currentSlide + 1) % slides.length) {
           slide.classList.add("next");
         }
@@ -185,7 +220,7 @@
     }
 
     // Auto-play
-    let autoplayInterval = setInterval(nextSlide, 5000);
+    let autoplayInterval = setInterval(nextSlide, 4000);
 
     // Pause on hover
     const slider = document.getElementById("slider");
@@ -194,7 +229,7 @@
     });
 
     slider.addEventListener("mouseleave", () => {
-      autoplayInterval = setInterval(nextSlide, 5000);
+      autoplayInterval = setInterval(nextSlide, 4000);
     });
 
     // Touch support
@@ -208,16 +243,14 @@
     slider.addEventListener("touchend", (e) => {
       touchEndX = e.changedTouches[0].screenX;
       if (touchStartX - touchEndX > 50) {
-        // Swipe left
         nextSlide();
       } else if (touchEndX - touchStartX > 50) {
-        // Swipe right
         currentSlide = (currentSlide - 1 + slides.length) % slides.length;
         updateSlides();
       }
     });
 
-    // Initial update
+    // Initial setup
     updateSlides();
   </script>
 </body>
