--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     .slider-wrapper {
       position: relative;
       width: 100%;
-      max-width: 1200px;
-      height: 400px;
+      max-width: 1400px;
+      height: 600px;
       margin: 2rem auto;
       overflow: hidden;
     }
@@ -31,7 +31,7 @@
 
     .slide {
       position: absolute;
-      width: 280px;
+      width: 380px;
       height: 100%;
       transition: all 0.5s ease-in-out;
       overflow: hidden;
@@ -42,20 +42,21 @@
 
     .slide.prev {
       opacity: 0.5;
-      transform: translateX(-100%) scale(0.8);
+      transform: translateX(-90%) scale(0.85);
       filter: blur(3px);
       z-index: 1;
     }
 
     .slide.active {
       opacity: 1;
-      transform: translateX(0) scale(1);
+      transform: translateX(0) scale(1.1);
       z-index: 2;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     }
 
     .slide.next {
       opacity: 0.5;
-      transform: translateX(100%) scale(0.8);
+      transform: translateX(90%) scale(0.85);
       filter: blur(3px);
       z-index: 1;
     }
@@ -78,8 +79,8 @@
     }
 
     .slider-nav a {
-      width: 8px;
-      height: 8px;
+      width: 10px;
+      height: 10px;
       border-radius: 50%;
       background-color: #fff;
       opacity: 0.5;
@@ -104,11 +105,23 @@
 
     @media (max-width: 768px) {
       .slider-wrapper {
-        height: 300px;
+        height: 450px;
       }
 
       .slide {
-        width: 220px;
+        width: 300px;
+      }
+
+      .slide.active {
+        transform: translateX(0) scale(1.05);
+      }
+
+      .slide.prev {
+        transform: translateX(-85%) scale(0.8);
+      }
+
+      .slide.next {
+        transform: translateX(85%) scale(0.8);
       }
     }
   </style>
