--- a/index.html
+++ b/index.html
@@ -6,17 +6,37 @@
   <title>SpeachyAI - Your AI Companion</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
+    .navbar {
+      padding: 0.5rem 2rem;
+    }
+
+    .hero {
+      padding-top: 1rem;
+    }
+
     .hero-content {
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 0 1rem;
+    }
+
+    .hero-content h1 {
+      margin-bottom: 0.5rem;
+    }
+
+    .hero-content h2 {
+      margin-bottom: 0.5rem;
+    }
+
+    .hero-content p {
+      margin-bottom: 1rem;
     }
 
     .slider-wrapper {
       position: relative;
       width: 100%;
-      max-width: 1400px;
-      height: 600px;
-      margin: 2rem auto;
+      max-width: 1200px;
+      height: 500px;
+      margin: 1rem auto;
       overflow: hidden;
     }
 
@@ -31,13 +51,25 @@
 
     .slide {
       position: absolute;
-      width: 380px;
+      width: 320px;
       height: 100%;
       transition: all 0.5s ease-in-out;
       overflow: hidden;
       border-radius: 20px;
       opacity: 0;
       transform: translateX(100%) scale(0.8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .slide img {
+      width: auto;
+      height: auto;
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+      border-radius: 15px;
     }
 
     .slide.prev {
@@ -59,13 +91,6 @@
       transform: translateX(90%) scale(0.85);
       filter: blur(3px);
       z-index: 1;
-    }
-
-    .slide img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 15px;
     }
 
     .slider-nav {
@@ -100,16 +125,25 @@
     }
 
     .cta-buttons {
-      margin-top: 2rem;
+      margin-top: 1rem;
+    }
+
+    footer {
+      margin-top: 1rem;
     }
 
     @media (max-width: 768px) {
+      .hero {
+        padding-top: 0.5rem;
+      }
+
       .slider-wrapper {
-        height: 450px;
+        height: 400px;
+        margin: 0.5rem auto;
       }
 
       .slide {
-        width: 300px;
+        width: 260px;
       }
 
       .slide.active {
@@ -122,6 +156,10 @@
 
       .slide.next {
         transform: translateX(85%) scale(0.8);
+      }
+
+      .cta-buttons {
+        margin-top: 0.5rem;
       }
     }
   </style>
