--- a/index.html
+++ b/index.html
@@ -67,28 +67,24 @@
       height: 85%;
       transition: all 0.5s ease-in-out;
       overflow: hidden;
-      border-radius: 20px;
+      border-radius: 16px;
       opacity: 0;
       transform: translateX(100%) scale(0.8);
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 0;
+      background: transparent;
     }
 
     .slide img {
-      width: auto;
-      height: auto;
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
       object-fit: contain;
-      border-radius: 15px;
-    }
-
-    .slide.prev {
-      opacity: 0.5;
-      transform: translateX(-70%) scale(0.85);
-      filter: blur(3px);
-      z-index: 1;
+      border-radius: 16px;
+      display: block;
+      margin: 0;
+      padding: 0;
     }
 
     .slide.active {
@@ -98,11 +94,22 @@
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     }
 
-    .slide.next {
+    .slide.active img {
+      border-radius: 16px;
+    }
+
+    .slide.prev, .slide.next {
       opacity: 0.5;
-      transform: translateX(70%) scale(0.85);
       filter: blur(3px);
       z-index: 1;
+    }
+
+    .slide.prev {
+      transform: translateX(-70%) scale(0.85);
+    }
+
+    .slide.next {
+      transform: translateX(70%) scale(0.85);
     }
 
     .slider-nav {
@@ -201,11 +208,14 @@
 
       .slide {
         width: 200px;
-        height: 85%;
       }
 
-      .slide.active {
-        transform: translateX(0) scale(1.05);
+      .slide img {
+        border-radius: 14px;
+      }
+
+      .slide.active img {
+        border-radius: 14px;
       }
 
       .slide.prev {
