--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       position: relative;
       width: 95%;
       max-width: 900px;
-      height: 520px;
+      height: 550px;
       margin: 0 auto;
       overflow: visible;
     }
@@ -63,8 +63,8 @@
 
     .slide {
       position: absolute;
-      width: 260px;
-      height: 85%;
+      width: 280px;
+      height: 88%;
       transition: all 0.5s ease-in-out;
       overflow: hidden;
       opacity: 0;
@@ -79,9 +79,12 @@
     }
 
     .slide img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      width: auto;
+      height: auto;
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+      object-position: center;
       border-radius: 24px;
       display: block;
       margin: 0;
@@ -95,6 +98,7 @@
       z-index: 2;
       border-radius: 24px;
       overflow: hidden;
+      height: 92%;
     }
 
     .slide.active img {
@@ -205,7 +209,7 @@
 
       .slider-wrapper {
         width: 98%;
-        height: 420px;
+        height: 450px;
       }
 
       .slider {
@@ -213,8 +217,8 @@
       }
 
       .slide {
-        width: 200px;
-        border-radius: 20px;
+        width: 220px;
+        height: 88%;
       }
 
       .slide img {
@@ -222,7 +226,7 @@
       }
 
       .slide.active {
-        border-radius: 20px;
+        height: 92%;
       }
 
       .slide.active img {
