--- a/privacy.html
+++ b/privacy.html
@@ -56,7 +56,93 @@
     <h2>8. Changes to This Privacy Policy</h2>
     <p>We may update this Privacy Policy from time to time. Significant changes will be communicated via email or in-app notifications.</p>
 
-    <h2>9. Contact Us</h2>
+    
+  <h2>9. General Information</h2>
+  <p>This Privacy Policy applies to the services provided by SpeachyAI (referred to as “we,” “our,” or “us”) through the website 
+    <a href="https://speachyai.com" target="_blank">speachyai.com</a> and all related applications.</p>
+  <p>If you do not agree with the practices described in this Policy, please do not use our services.</p>
+  <p>For any questions, you can contact us at:<br>
+     📧 <strong>Email:</strong> <a href="mailto:contact@speachyai.com">contact@speachyai.com</a></p>
+
+  <h2>10. Data We Collect</h2>
+  <p>We may collect the following types of information:</p>
+  <h3>a. Information You Provide</h3>
+  <ul>
+    <li><strong>Account Information:</strong> Email address, username, and password when you register.</li>
+    <li><strong>User Content:</strong> Any text, messages, or prompts you share during your use of our services.</li>
+  </ul>
+  <h3>b. Automatically Collected Information</h3>
+  <ul>
+    <li><strong>Usage Data:</strong> Time and date of usage, chat duration, interaction logs.</li>
+    <li><strong>Device & Technical Data:</strong> IP address, browser type, operating system, device model.</li>
+  </ul>
+
+  <h2>11. How We Use Your Data</h2>
+  <ul>
+    <li>Provide and improve our services.</li>
+    <li>Communicate with you regarding updates or support.</li>
+    <li>Analyze usage trends for service enhancement.</li>
+    <li>Ensure the security and integrity of our platform.</li>
+    <li>Comply with legal obligations.</li>
+  </ul>
+  <p><strong>We do not use your content to train our AI models without your explicit consent.</strong></p>
+
+  <h2>12. Data Storage and Security</h2>
+  <p>We implement administrative and technical safeguards to protect your personal data.</p>
+  <ul>
+    <li>All data is stored on secure servers.</li>
+    <li>We use encryption and access controls.</li>
+    <li>Only authorized personnel can access your data.</li>
+  </ul>
+  <p>While we strive to protect your data, no method of transmission over the internet is 100% secure.</p>
+
+  <h2>13. Cookies and Tracking Technologies</h2>
+  <p>We may use cookies and similar technologies to:</p>
+  <ul>
+    <li>Remember your preferences.</li>
+    <li>Analyze user behavior to enhance the platform.</li>
+    <li>Provide customized content.</li>
+  </ul>
+  <p>You can manage cookie preferences through your browser settings.</p>
+
+  <h2>14. Third-Party Services</h2>
+  <p>We may share your data with third-party service providers only to the extent necessary to operate our services, such as:</p>
+  <ul>
+    <li>Cloud hosting providers</li>
+    <li>Analytics services</li>
+    <li>Customer support tools</li>
+  </ul>
+  <p>All such providers are contractually obligated to maintain the confidentiality and security of your data.</p>
+
+  <h2>15. User Rights</h2>
+  <p>You have the following rights regarding your personal data:</p>
+  <ul>
+    <li><strong>Access</strong> – Request a copy of the data we hold.</li>
+    <li><strong>Correction</strong> – Request corrections to inaccurate or incomplete data.</li>
+    <li><strong>Deletion</strong> – Request account deletion and data erasure.</li>
+    <li><strong>Objection</strong> – Object to certain data processing activities.</li>
+    <li><strong>Restriction</strong> – Request to limit data processing under certain conditions.</li>
+  </ul>
+  <p>To exercise any of these rights, contact us at <a href="mailto:contact@speachyai.com">contact@speachyai.com</a>.</p>
+
+  <h2>16. Children’s Privacy</h2>
+  <p>Our services are not intended for children under the age of <strong>13</strong>.<br>
+  We do not knowingly collect data from anyone under this age.<br>
+  If we become aware that such data has been collected, we will take appropriate steps to delete it.</p>
+
+  <h2>17. International Users</h2>
+  <p>If you are accessing SpeachyAI from outside Türkiye, be aware that your data may be processed in countries where data protection laws may differ.<br>
+  By using our services, you consent to this data transfer and processing.</p>
+
+  <h2>18. Changes to This Policy</h2>
+  <p>We may update this Privacy Policy from time to time. Changes will be posted here with a new effective date.</p>
+  <p>We recommend reviewing this Policy periodically to stay informed of any changes.</p>
+
+
+
+
+    
+    <h2>19. Contact Us</h2>
     <p>If you have any questions or concerns about this Privacy Policy, feel free to contact us:</p>
     <p>📧 contact@speachyai.com</p>
     <p>🌐 www.speachyai.com</p>
