--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Privacy Policy</h1>
-    <p><em>Last Updated: April 15, 2024</em></p>
+    <p><em>Last Updated: April 15, 2025</em></p>
 
     <p>This Privacy Policy explains how SpeachyAI ("we", "our", "us", "the app") collects, uses, stores, and protects user ("you", "your") data while using our services. By using SpeachyAI, you agree to the practices described in this policy.</p>
 
@@ -145,6 +145,7 @@
     <h2>19. Contact Us</h2>
     <p>If you have any questions or concerns about this Privacy Policy, feel free to contact us:</p>
     <p>📧 contact@speachyai.com</p>
+    <p>📧 support@speachyai.com</p>
     <p>🌐 www.speachyai.com</p>
 
     <hr>
