--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           <a href="#" class="cta-button android">
             <img src="android-icon.svg" alt="Android"/> Android
           </a>
-          <a href="#" class="cta-button ios">
+          <a href="https://apps.apple.com/tr/app/speachyai/id6742565399?l=tr" class="cta-button ios">
             <img src="ios-icon.svg" alt="iOS"/> iOS
           </a>
         </div>
